fix(contact) align address

--- a/site/web/app/themes/smart-city/resources/assets/styles/layouts/_contact.scss
+++ b/site/web/app/themes/smart-city/resources/assets/styles/layouts/_contact.scss
@@ -46,3 +46,8 @@ body.contact .map-container {
   width: 100%;
   height: 400px;
 }
+
+body.contact .address {
+  margin-bottom: 25px;
+  padding: 15px;
+}
